--- a/Web.config
+++ b/Web.config
@@ -8,7 +8,7 @@
         <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </configSections>
   <connectionStrings>
-    <add name="LanchesContext" connectionString="Data Source=DESKTOP-VK8MVR5\SQLEXPRESS; Initial Catalog=dbWebLanche; Integrated Security=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="LanchesContext" connectionString="Data Source=sql5041.site4now.net; Initial Catalog=DB_A61730_webLanche; Integrated Security=False;User Id=DB_A61730_webLanche_admin;pwd=master@123; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
