Add das Procedures na pasta SQL

--- a/WebVendaLanches.csproj
+++ b/WebVendaLanches.csproj
@@ -167,6 +167,9 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="SQL\SP_RECUPERA_CARDAPIO.sql" />
+    <Content Include="SQL\SP_RECUPERA_INGREDIENTES_LANCHE.sql" />
+    <Content Include="SQL\SP_RECUPERA_LANCHE_POR_ID.sql" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
